Project

General

Profile

Actions

Bug #25007

closed

common: Cond.h:C_SaferCond does not check done before calling cond.WaitInterval, creating a race condition

Added by Patrick Donnelly almost 6 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
High
Category:
common
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
luminous,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 2 (0 open2 closed)

Copied to Ceph - Backport #25221: luminous: common: Cond.h:C_SaferCond does not check done before calling cond.WaitInterval, creating a race conditionRejectedActions
Copied to Ceph - Backport #25222: mimic: common: Cond.h:C_SaferCond does not check done before calling cond.WaitInterval, creating a race conditionResolvedPrashant DActions
Actions #1

Updated by Patrick Donnelly almost 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Sage Weil over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #25221: luminous: common: Cond.h:C_SaferCond does not check done before calling cond.WaitInterval, creating a race condition added
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #25222: mimic: common: Cond.h:C_SaferCond does not check done before calling cond.WaitInterval, creating a race condition added
Actions #5

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF