common: check completion condition before waiting

Fixes: http://tracker.ceph.com/issues/25007

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>